# lauv_gazebo

./: .gitignore  .lauv_gazebo.rosinstall  .travis.yml  NOTICE  README.md
.github/workflows/: industrial_ci_action.yml
lauv_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
lauv_control/launch/: start_auv_teleop.launch  start_auv_trajectory_control.launch  start_control_allocator.launch  start_nmb_sm_control.launch
lauv_control/rviz/: lauv_control.rviz
lauv_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
lauv_description/launch/: upload.launch  upload.py
lauv_description/meshes/: black_fin.dae  body.dae  body.stl  propeller.dae  red_fin.dae  side_scan_sonar.dae
lauv_description/robots/: default.xacro
lauv_description/test/: test_urdf_files.py  test_urdf_files.test
lauv_description/urdf/: actuators.xacro  base.xacro  gazebo.xacro  sensors.xacro  snippets.xacro
lauv_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
lauv_gazebo/config/: waypoint_set.yaml
lauv_gazebo/launch/: start_demo_auv_control.launch  start_demo_nmb_sm.launch  start_demo_teleop.launch
lauv_gazebo/rviz/: lauv_teleop.rviz
