<?xml version="1.0"?>
<package format="2">
  <name>lauv_description</name>
  <version>0.1.6</version>
  <description>Robot description files for the LAUV.</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>

  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

  <license>Apache-2.0</license>

  <exec_depend>uuv_descriptions</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins</exec_depend>
  <exec_depend>uuv_sensor_ros_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>uuv_assistants</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>xacro</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
